[gd_scene load_steps=7 format=3 uid="uid://devmwslkf4fe2"]

[ext_resource type="Script" path="res://objects/#attachments/level_use/scripts/level_timer.gd" id="1_yt640"]
[ext_resource type="LabelSettings" uid="uid://psvkk7on4wd" path="res://objects/#attachments/level_use/themes/hud_theme.tres" id="2_jifop"]
[ext_resource type="Script" path="res://objects/#attachments/level_use/scripts/level_timer_kill_all.gd" id="3_l7rko"]

[sub_resource type="Animation" id="Animation_fvpck"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Frame/Container/TimeX:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_a23jf"]
resource_name = "warning"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Frame/Container/TimeX:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.2), Vector2(1, 1), Vector2(1, 0.2), Vector2(1, 1), Vector2(1, 0.2), Vector2(1, 1), Vector2(1, 0.2), Vector2(1, 1), Vector2(1, 0.2), Vector2(1, 1), Vector2(1, 0.2), Vector2(1, 1), Vector2(1, 0.2), Vector2(1, 1), Vector2(1, 0.2), Vector2(1, 1), Vector2(1, 0.2), Vector2(1, 1), Vector2(1, 0.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kjeky"]
_data = {
"RESET": SubResource("Animation_fvpck"),
"warning": SubResource("Animation_a23jf")
}

[node name="LevelTimer" type="CanvasLayer"]
editor_description = "Drag this under the level node, and this will make level await for scoring when the level is being finished
If there's no need for time limit for a level, please remove this from the stage.
"
layer = 10
script = ExtResource("1_yt640")

[node name="Frame" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 480.0
metadata/_edit_lock_ = true

[node name="Container" type="Control" parent="Frame"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -90.0
offset_top = 16.0
offset_right = -33.0
offset_bottom = 52.0
grow_horizontal = 0

[node name="TimeX" type="Label" parent="Frame/Container"]
layout_mode = 2
anchor_left = 1.0
anchor_right = 1.0
offset_left = -56.0
offset_bottom = 17.0
grow_horizontal = 0
pivot_offset = Vector2(28, 9)
text = "Time"
label_settings = ExtResource("2_jifop")
horizontal_alignment = 2
uppercase = true

[node name="Times" type="Label" parent="Frame/Container"]
layout_mode = 2
anchor_left = 1.0
anchor_right = 1.0
offset_left = -113.0
offset_top = 19.0
offset_bottom = 36.0
text = "0"
label_settings = ExtResource("2_jifop")
horizontal_alignment = 2
uppercase = true

[node name="TimeUp" type="Label" parent="Frame"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(320, 240)
text = "Time's Up!"
label_settings = ExtResource("2_jifop")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Interval" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="KillsAllPlayer" type="Node" parent="."]
script = ExtResource("3_l7rko")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kjeky")
}

[connection signal="timer_over" from="." to="KillsAllPlayer" method="time_up_kill_all_players"]
